[package]
name = "hype"
version = "0.1.0"
edition = "2021"

[lib]
name = "hype"
path = "src/lib.rs"

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[[bin]]
name = "fileserver"
path = "src/bin/fileserver.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
url = "2.3"
regex = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

