[package]
name = "hype"
version = "0.1.0"
edition = "2021"

[lib]
name = "hype"
path = "src/lib.rs"

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[[bin]]
name = "fileserver"
path = "src/bin/fileserver.rs"

[dependencies]
argh = "0.1"
log = "0.4"
lazy_static = "1.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
url = "2.3"
rand = "0.8"
regex = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
futures = "0.3"
tokio-util = {version = "0.7", features = ["time"]}
tokio-rustls = "0.23"
webpki-roots = "0.22"
rustls-pemfile = "1.0"

